=== 0.0.5 / 2009-11-08

* API CHANGE: Reworked how string encoding is specified. Default encoding for both reading and writing is now ASCII-8BIT unless specified in the API or within the file as a parser directive.
* Added a parser directive to set logfile encoding.
* Versionomy is no longer a hard dependency-- it is now used only if available.

=== 0.0.4 / 2009-11-06

* API CHANGE: Renamed DateBasedLogFile options :prefix and :suffix to :path_prefix and :path_suffix
* API CHANGE: Renamed ShiftingLogFile options :filepath and :max_logfile_size to :file_path and :max_file_size
* Encoding can now be specified in file reading and writing methods (Rotaters and convenience interface methods)

=== 0.0.3 / 2009-10-31

* API CHANGE: Renamed processor close methods to "finish" and introduced return value semantics for passing "final" information back up the processor tree.
* API CHANGE: Renamed :dirname options to :basedir on both rotater strategies
* API CHANGE: Renamed :filename option to :filepath on ShiftingLogFile
* API CHANGE: Renamed :local_timezone option to :local_datestamps on DateBasedLogFile
* API CHANGE: Renamed FilterBasicFields to FilterByBasicFields
* Added FilterByBlock processors
* Added CompileReport processors
* Processors can now add custom methods to the processor building DSL.
* Added a bunch of convenience methods to the toplevel Sawmill module.
* Entries can be truncated at a particular length when formatting.
* Records can compute and cache values.
* Support length limits when formatting entries.
* Fixed a few more bugs related to processors.
* More work on the RDocs

=== 0.0.2 / 2009-10-28

* Added multi-parser utility.
* Fixed several bugs involving parsing and formatting.
* Logger uses activesupport's SecureRandom on Ruby 1.8 if available.

=== 0.0.1 / 2009-10-28

* Initial test release